packages/build/tests/error/build/fixtures/fail_build/plugin.js
module.exports = {
  async onInit({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
